--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "lint:fix": "npm run lint -- --fix",
     "cleanup": "rimraf target/classes/static/",
     "clean-www": "rimraf target/classes/static/app/{src,target/}",
+    "e2e": "npm run e2e:cypress",
+    "pree2e:headless": "npm run ci:server:await",
+    "e2e:headless": "npm run e2e:cypress:headless",
+    "e2e:cypress:headless": "npm run e2e:cypress -- --headless",
+    "e2e:cypress": "cypress run --browser chrome --record ${CYPRESS_ENABLE_RECORD:-false}",
+    "cypress": "cypress open",
     "jest": "jest --coverage --logHeapUsage --maxWorkers=2 --config jest.conf.js",
     "start": "ng serve --hmr",
     "start-tls": "npm run webapp:dev -- --env.tls",
@@ -59,8 +65,14 @@
     "ci:e2e:package": "npm run java:$npm_package_config_packaging:$npm_package_config_default_environment -- -Pe2e -Denforcer.skip=true",
     "preci:e2e:server:start": "npm run docker:db:await --if-present && npm run docker:others:await --if-present",
     "ci:e2e:server:start": "java -jar target/e2e.$npm_package_config_packaging --spring.profiles.active=$npm_package_config_default_environment -Dlogging.level.ROOT=OFF -Dlogging.level.org.zalando=OFF -Dlogging.level.tech.jhipster=OFF -Dlogging.level.com.mamazinha.gateway=OFF -Dlogging.level.org.springframework=OFF -Dlogging.level.org.springframework.web=OFF -Dlogging.level.org.springframework.security=OFF --logging.level.org.springframework.web=ERROR",
+    "ci:server:await": "echo \"Waiting for server at port $npm_package_config_backend_port to start\" && wait-on http-get://localhost:$npm_package_config_backend_port/management/health && echo \"Server at port $npm_package_config_backend_port started\"",
+    "ci:e2e:run": "concurrently -k -s first \"npm run ci:e2e:server:start\" \"npm run e2e:headless\"",
+    "e2e:dev": "concurrently -k -s first \"./mvnw\" \"npm run e2e\"",
     "ci:frontend:build": "npm run webapp:build:$npm_package_config_default_environment",
-    "ci:frontend:test": "npm run ci:frontend:build && npm test"
+    "ci:frontend:test": "npm run ci:frontend:build && npm test",
+    "cypress:audits": "cypress open --config-file cypress-audits.json",
+    "e2e:cypress:audits:headless": "npm run e2e:cypress -- --headless --config-file cypress-audits.json",
+    "e2e:cypress:audits": "cypress run --browser chrome --record ${CYPRESS_ENABLE_RECORD:-false} --config-file cypress-audits.json"
   },
   "config": {
     "backend_port": "8080",
@@ -106,8 +118,11 @@
     "browser-sync-webpack-plugin": "2.3.0",
     "concurrently": "6.2.0",
     "copy-webpack-plugin": "9.0.0",
+    "cypress": "7.5.0",
+    "cypress-audit": "1.0.0",
     "eslint": "7.28.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-cypress": "2.11.3",
     "eslint-webpack-plugin": "2.5.4",
     "generator-jhipster": "7.1.0",
     "husky": "4.3.8",
@@ -115,6 +130,7 @@
     "jest-date-mock": "1.0.8",
     "jest-junit": "12.2.0",
     "jest-sonar-reporter": "2.0.0",
+    "lighthouse": "8.0.0",
     "lint-staged": "11.0.0",
     "merge-jsons-webpack-plugin": "1.0.21",
     "prettier": "2.3.1",
