Change status description to make clear that JHipster Registry use gateway configuration on localhost - I add You are LOCALHOST to diff from baby microservice

--- a/src/main/docker/central-server-config/localhost-config/application.yml
+++ b/src/main/docker/central-server-config/localhost-config/application.yml
@@ -1,7 +1,7 @@
 # Common configuration shared between all applications
 configserver:
   name: Docker JHipster Registry
-  status: You are Connected to the JHipster Registry running in Docker
+  status: You are LOCALHOST Connected to the JHipster Registry running in Docker
 
 jhipster:
   security:
