--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@ngx-translate/http-loader": "6.0.0",
     "bootstrap": "4.6.0",
     "dayjs": "1.10.7",
+    "ng2-nvd3": "^2.0.0",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-webstorage": "8.0.0",
     "rxjs": "6.6.7",
