Expose logs to be read by Jhipster Control Center

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -210,3 +210,6 @@ jhipster:
 # ===================================================================
 
 # application:
+logging:
+  file:
+    name: target/gateway-log
