Configure the application email service wich will be sent by mamazinha.mail@gmail.com

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -54,10 +54,16 @@ spring:
     contexts: dev, faker
     url: jdbc:h2:file:./target/h2db/db/gateway;DB_CLOSE_DELAY=-1
   mail:
-    host: localhost
-    port: 25
-    username:
-    password:
+    host: smtp.gmail.com
+    port: 587
+    username: mamazinha.mail@gmail.com
+    password: qnwbymmopqnyluui
+    protocol: smtp
+    tls: true
+    properties.mail.smtp:
+      auth: true
+      starttls.enable: true
+      ssl.trust: smtp.gmail.com
   messages:
     cache-duration: PT1S # 1 second, see the ISO 8601 standard
   r2dbc:
