--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -55,10 +55,16 @@ spring:
     contexts: prod
     url: jdbc:postgresql://localhost:5432/gateway
   mail:
-    host: localhost
-    port: 25
-    username:
-    password:
+    host: smtp.gmail.com
+    port: 587
+    username: mamazinha.mail@gmail.com
+    password: qnwbymmopqnyluui
+    protocol: smtp
+    tls: true
+    properties.mail.smtp:
+      auth: true
+      starttls.enable: true
+      ssl.trust: smtp.gmail.com
   r2dbc:
     url: r2dbc:postgresql://localhost:5432/gateway
     username: gateway
