Solve cypress and jest conflict, clean vscode plobems report and fix nap-update test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
     "preserveWhitespaces": true
-  }
+  },
+  "exclude": ["src/main/webapp/**/*.spec.ts"]
 }
