--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gateway",
-  "version": "0.0.1-SNAPSHOT",
+  "version": "1.0.0",
   "private": true,
   "description": "Description for gateway",
   "license": "UNLICENSED",
