Fix yml propertie to enable or not force https - Comment the logging path wich result in permission denied error on Kubernetes

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -149,8 +149,6 @@ jhipster:
 # More documentation is available at:
 # https://www.jhipster.tech/common-application-properties/
 # ===================================================================
-
-#application:
-enviromment:
+application:
   force-https:
     enabled: true
