--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -201,9 +201,11 @@ jhipster:
   security:
     content-security-policy: "default-src 'self'; frame-src 'self' data:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://storage.googleapis.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:"
 
-logging:
-  file:
-    name: target/gateway-log
+# Permission Denied error on Kubernetes
+# logging:
+#   file:
+#     name: gateway-log
+
 # ===================================================================
 # Application specific properties
 # Add your own application properties here, see the ApplicationProperties class
@@ -212,7 +214,6 @@ logging:
 # More documentation is available at:
 # https://www.jhipster.tech/common-application-properties/
 # ===================================================================
-#application:
-enviromment:
+application:
   force-https:
     enabled: false
