Fix test startup error

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -101,5 +101,6 @@ jhipster:
 # More documentation is available at:
 # https://www.jhipster.tech/common-application-properties/
 # ===================================================================
-
-# application:
+application:
+  force-https:
+    enabled: false
