--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -51,7 +51,7 @@ spring:
       enabled: false
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
-    contexts: dev, faker
+    contexts: dev
     url: jdbc:h2:file:./target/h2db/db/gateway;DB_CLOSE_DELAY=-1
   mail:
     host: smtp.gmail.com
